# RoMoCo

./: .gitignore  LICENSE  README.md
docker/: Dockerfile  build.sh  run.sh
src/biped_command/: CMakeLists.txt  package.xml
src/biped_command/include/biped_command/: radio_slider_gui.hpp  radio_slider_map.hpp  radio_subscriber.hpp
src/biped_command/src/: radio_main_node.cpp  radio_slider_gui.cpp
src/biped_command/test/: test_slider_gui.cpp
src/biped_control/: CMakeLists.txt  package.xml
src/biped_control/include/biped_control/: inair_output.hpp  standing_output.hpp  walking_output_base.hpp  walking_output_fp.hpp  walking_output_multidomain_fp.hpp
src/biped_control/src/: inair_output.cpp  standing_output.cpp  walking_output_base.cpp  walking_output_fp.cpp  walking_output_multidomain_fp.cpp
src/biped_control/test/: test_basic.cpp  test_casadi.cpp
src/biped_core/: CMakeLists.txt  package.xml
src/biped_core/include/biped_core/: biped_constants.hpp  com_states_rel_to_stance.hpp  friction_params.hpp  linefoot_robot_base_pinocchio.hpp  mujoco_sim_base.hpp  output_base.hpp  outputs.hpp  planefoot_robot_base_pinocchio.hpp  robot_base_pinocchio.hpp
src/biped_core/src/: com_states_rel_to_stance.cpp  linefoot_robot_base_pinocchio.cpp  output_base.cpp  outputs.cpp  planefoot_robot_base_pinocchio.cpp  robot_base_pinocchio.cpp
src/biped_planner/: CMakeLists.txt  package.xml
src/biped_planner/include/biped_planner/: DCMplanner.hpp  HLIP.hpp  HLIPplanner.hpp  MLIP.hpp  MLIPplanner.hpp  flatfoot_fp_planner.hpp  planner_types.hpp
src/biped_planner/src/: AdaptiveHLIP.cpp  HLIP.cpp  HLIPplanner.cpp  MLIP.cpp  MLIPplanner.cpp
src/biped_state_machine/: CMakeLists.txt  package.xml
src/biped_state_machine/include/biped_state_machine/: basic_state_machine.hpp
src/biped_state_machine/src/: basic_state_machine.cpp
src/biped_utils/: CMakeLists.txt  package.xml
src/biped_utils/include/biped_utils/: PhaseVariable.hpp  Pinverse.hpp  algebraic_riccati.hpp  angular_momentum_kf.hpp  bezier_tools.hpp  filters.hpp  geometry.hpp  hyperbolic.hpp  kinematics.hpp  yaml_parser.hpp
src/biped_utils/src/: PhaseVariable.cpp  Pinverse.cpp  algebraic_riccati.cpp  angular_momentum_kf.cpp  bezier_tools.cpp  geometry.cpp  hyperbolic.cpp  kinematics.cpp  yaml_parser.cpp
src/biped_utils/test/: test_algebraic_riccati.cpp  test_bezier_tools.cpp  test_kinematics.cpp  test_yaml_parser.cpp
src/cassie_simulation/: CMakeLists.txt  package.xml
src/cassie_simulation/LogReadMatlab/: CassieLog.m  test.m  test_standing_qp.m
src/cassie_simulation/config/: inair_config.yaml  mujoco_config.yaml  standing_config.yaml  walking_config.yaml
src/cassie_simulation/include/: cassie_model.hpp  cassie_mujoco_sim.hpp  cassie_sensor.hpp
src/cassie_simulation/include/cassie_interface/: cassie_out_t.h  cassiemujoco.h
src/cassie_simulation/launch/: cassiemujoco.launch  cassiemujoco.launch.py
src/cassie_simulation/model_files/urdf/: cassieRigid.urdf  cassieRigid_new.urdf  cassieRigid_steelsprings.urdf  cassie_v4.urdf  exported.urdf  transit4to5.m
src/cassie_simulation/model_files/xml/: cassie.xml  cassieHighStiff.xml  cassieRigid.xml  cassieRigidMultiDomain.xml  cassieRigid_hfield.xml  cassieRigid_steelsprings.xml  changeInertia.m  exported.xml  readme
src/cassie_simulation/src/: cassie_main_state_machine.cpp  cassie_model.cpp  cassie_mujoco_sim.cpp  cassie_sensor.cpp
src/cassie_simulation/src/cassie_interface/: cassiemujoco.c
src/cassie_simulation/test/: test.cpp
src/g1_simulation/: CMakeLists.txt  package.xml
src/g1_simulation/LogReadMatlab/: G1Log.m  test.m
src/g1_simulation/config_18dof/: inair_config.yaml  mujoco_config.yaml  standing_config.yaml  walking_config.yaml
src/g1_simulation/config_29dof/: mujoco_config.yaml  standing_config.yaml  walking_config.yaml
src/g1_simulation/include/: g1_model.hpp  g1_model_leg.hpp  g1_mujoco_sim.hpp  g1_sensor.hpp
src/g1_simulation/launch/: g1mujoco.launch  g1mujoco.launch.py  g1mujoco.launch.xml
src/g1_simulation/model_files/: g1_29_withsensor.urdf  g1_29_withsensor.xml  g1_29_withsensor_lowerbody.urdf  test.urdf  testpinocchio.py
src/g1_simulation/src/: g1_main_state_machine.cpp  g1_model.cpp  g1_model_leg.cpp  g1_mujoco_sim.cpp  g1_sensor.cpp  g1_state_machine_momentum.cpp
src/g1_simulation/test/: test.cpp
src/g1_simulation/test/pythontests/: testpinocchio.py
src/h1_simulation/: CMakeLists.txt  package.xml
src/h1_simulation/LogReadMatlab/: H1Log.m
src/h1_simulation/config/: inair_config.yaml  mujoco_config.yaml  standing_config.yaml  walking_config.yaml
src/h1_simulation/include/: h1_model_leg.hpp  h1_mujoco_sim.hpp  h1_sensor.hpp
src/h1_simulation/launch/: h1mujoco.launch
src/h1_simulation/model_files/: h1_2.xml
src/h1_simulation/src/: h1_main_state_machine.cpp  h1_model_leg.cpp  h1_mujoco_sim.cpp  h1_sensor.cpp
src/mujoco_interface/: CMakeLists.txt  package.xml
src/mujoco_interface/include/mujoco_interface/: mujoco_interface.hpp
src/mujoco_interface/src/: mujoco_interface.cpp
src/mujoco_interface/test/: test_model.xml  test_mujoco_interface.cpp
src/torque_control/: CMakeLists.txt  package.xml
src/torque_control/include/torque_control/: pd_controller.hpp  torque_solver_base.hpp  torque_solver_inv_dyn.hpp  torque_solver_pos_ik.hpp  torque_solver_tscqp.hpp  torque_solver_vel_ik.hpp
src/torque_control/src/: pd_controller.cpp  torque_solver_base.cpp  torque_solver_inv_dyn.cpp  torque_solver_pos_ik.cpp  torque_solver_tscqp.cpp  torque_solver_vel_ik.cpp
src/torque_control/test/: test_clarabel.cpp
