<?xml version="1.0"?>
<package format="2">
  <name>g1_simulation</name>
  <version>0.0.0</version>
  <description>The g1 simulation package</description>
  <maintainer email="mdai@caltech.edu">mdai</maintainer>
  <license>GPL-3.0-or-later</license>
  <author email="mdai@caltech.edu">Min Dai</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <build_export_depend>eigen</build_export_depend>
  <exec_depend>eigen</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>



  <depend>mujoco_interface</depend>
  <depend>biped_core</depend>
  <depend>torque_control</depend>
  <depend>biped_control</depend>
  <depend>biped_utils</depend>
  <depend>biped_command</depend>
  <depend>biped_state_machine</depend>

  <!-- <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend> -->
  <test_depend>ament_cmake_gtest</test_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
